[gd_scene load_steps=8 format=4 uid="uid://cgbbr8jqu5etq"]

[ext_resource type="Script" path="res://scenes/Level.gd" id="1_wf66v"]
[ext_resource type="AudioStream" uid="uid://dquldicyttdet" path="res://sound/music/Cute Loops - Gumdrop Groove.mp3" id="2_6sce1"]
[ext_resource type="TileSet" uid="uid://4mt6ig31u6ar" path="res://tilesets/Interior.tres" id="2_7ccn4"]
[ext_resource type="PackedScene" uid="uid://byhdt3q3r8gd1" path="res://scenes/VoidAgent.tscn" id="3_w64ms"]
[ext_resource type="PackedScene" uid="uid://cilj467j6wng7" path="res://scenes/GUI/TimerLabel.tscn" id="4_s2c1x"]
[ext_resource type="PackedScene" uid="uid://bdh1v1uete7wu" path="res://scenes/GUI/ClickerLabel.tscn" id="5_7ug8x"]
[ext_resource type="PackedScene" uid="uid://cy7ap8o40halo" path="res://scenes/GUI/ScoreScreen.tscn" id="6_etx6x"]

[node name="Level" type="Node2D"]
texture_filter = 1
position = Vector2(0, -66)
scale = Vector2(2, 2)
script = ExtResource("1_wf66v")
music = ExtResource("2_6sce1")

[node name="Layers" type="Node2D" parent="."]

[node name="Background" type="TileMapLayer" parent="Layers"]
z_index = -2
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAYAAAAAAAUAAAAGAAcAAAAAAAUAAAAGAAgAAAAAAAYAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAYAAAATAAYAAAAHAAcAAAAMAAMAAAAHAAgAAAABAAYAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAYAAAANAAEAAAAIAAcAAAANAAMAAAAIAAgAAAACAAYAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAYAAAAPAAEAAAAJAAcAAAAPAAMAAAAJAAgAAAABAAYAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAYAAAAOAAEAAAAKAAcAAAAOAAMAAAAKAAgAAAACAAYAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAYAAAANAAEAAAALAAcAAAANAAMAAAALAAgAAAABAAYAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAYAAAAWAAYAAAAMAAcAAAASAAMAAAAMAAgAAAACAAYAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAYAAAADAAUAAAANAAcAAAADAAUAAAANAAgAAAADAAYAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0AAAAAAAAAAAABAAAAAAAAAAAAAAABAA0AAAAAAAAAAAACAAAAAAAAAAAAAAACAA0AAAAAAAAAAAADAAAAAAAAAAAAAAADAA0AAAAAAAAAAAAEAAAAAAAAAAAAAAAEAA0AAAAAAAAAAAAFAAAAAAAAAAAAAAAFAA0AAAAAAAAAAAAGAAAAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAAAAAAAAAAAAAAAHAA0AAAAAAAAAAAAIAAAAAAAAAAAAAAAIAA0AAAAAAAAAAAAJAAAAAAAAAAAAAAAJAA0AAAAAAAAAAAAKAAAAAAAAAAAAAAAKAA0AAAAAAAAAAAALAAAAAAAAAAAAAAALAA0AAAAAAAAAAAAMAAAAAAAAAAAAAAAMAA0AAAAAAAAAAAANAAAAAAAAAAAAAAANAA0AAAAAAAAAAAAOAAAAAAAAAAAAAAAOAA0AAAAAAAAAAAAPAAAAAAAAAAAAAAAPAA0AAAAAAAAAAAAQAAAAAAAAAAAAAAAQAA0AAAAAAAAAAAARAAAAAAAAAAAAAAARAA0AAAAAAAAAAAASAAAAAAAAAAAAAAASAA0AAAAAAAAAAAATAAAAAAAAAAAAAAATAA0AAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAMAAAAHAAQAAAAAAAAAAAAHAAUAAAATAAUAAAAIAAQAAAABAAMAAAAIAAUAAAANAAAAAAAJAAQAAAACAAMAAAAJAAUAAAAPAAAAAAAKAAQAAAABAAMAAAAKAAUAAAAOAAAAAAALAAQAAAACAAMAAAALAAUAAAANAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAWAAUAAAANAAQAAAAAAAAAAAANAAUAAAADAAMAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="BackgroundFurniture" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAIAAYAAAAaAAAAAAAIAAcAAAAaAAEAAAALAAYAAAAeAAoAAAALAAcAAAAeAAsAAAAMAAcAAAAfAAsAAAAHAAcAAAAZAAQAAAAJAAcAAAAaAAQAAAA=")
tile_set = ExtResource("2_7ccn4")
collision_visibility_mode = 1
navigation_enabled = false
navigation_visibility_mode = 1

[node name="BackgroundFurnitureAccents" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAJAAYAAAAhAAMAAAALAAYAAAAZABIAAAAMAAYAAAAaABIAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="Doors" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAKAAYAAAATAAAAAAAKAAcAAAATAAEAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="Floors" type="TileMapLayer" parent="Layers"]
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="Stairs" type="TileMapLayer" parent="Layers"]
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="Trim" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAHAAQAAAABAAAAAAAHAAUAAAABAAEAAAAMAAQAAAACAAAAAAAMAAUAAAACAAEAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="ForegroundFurniture" type="TileMapLayer" parent="Layers"]
z_index = 1
tile_map_data = PackedByteArray("AAAHAAcAAAAYAA4AAAAIAAcAAAAZAA4AAAAMAAcAAAAfAAkAAAALAAcAAAAeAAgAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="ForegroundFurnitureAccents" type="TileMapLayer" parent="Layers"]
z_index = 1
tile_map_data = PackedByteArray("AAALAAYAAAAeAAoAAAA=")
tile_set = ExtResource("2_7ccn4")
navigation_enabled = false
navigation_visibility_mode = 1

[node name="Voids" type="Node2D" parent="."]

[node name="Void1" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(306, 228)
speed = 60.0
animationState = 2

[node name="Void2" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(241, 218)
moves = true
speed = 10.0
animationState = 9

[node name="Void3" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(246, 249.5)
speed = 60.0
animationState = 8

[node name="Void4" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(272.5, 193)
speed = 60.0
flipH = true
animationState = 2

[node name="Void5" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(363.5, 226)
speed = 60.0
flipH = true
animationState = 3

[node name="Void6" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(403.5, 250)
speed = 60.0
flipH = true
animationState = 4

[node name="Void7" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(311.5, 212)
speed = 10.0

[node name="Void8" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(258, 233)
speed = 60.0
animationState = 7

[node name="Void9" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(332, 250)
moves = true
speed = 30.0
animationState = 10

[node name="Void10" parent="Voids" instance=ExtResource("3_w64ms")]
position = Vector2(393.5, 226)
moves = true
speed = 10.0
flipH = true
animationState = 9

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 213)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -248.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Timer" parent="CanvasLayer/HBoxContainer" instance=ExtResource("4_s2c1x")]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Clicker" parent="CanvasLayer/HBoxContainer" instance=ExtResource("5_7ug8x")]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ScoreScreen" parent="CanvasLayer" node_paths=PackedStringArray("level", "clicker") instance=ExtResource("6_etx6x")]
visible = false
level = NodePath("../..")
clicker = NodePath("../HBoxContainer/Clicker")

[node name="CountdownLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 64
theme_override_font_sizes/font_size = 512
text = "3"

[connection signal="level_complete" from="CanvasLayer/HBoxContainer/Timer" to="CanvasLayer/ScoreScreen" method="_on_timer_level_complete"]
